* Regular Board | 24-hour format of hour (with leading zero) replaces 24-hour format (without leading zero) * Regular Board | Last 3 replies (if exist) for threads shown below OP * Regular Board | Reply count fixed * Regular Board | Word-wrap for paragraphs in op/reply (added) * Regular Board | standard copyright/trademark message (changeable) added to bottom of boards * Regular Board | Last (timestamp) changed for newly created threads to excessive-future date to ensure immediate placement at top of list * Regular Board | Some elements (instead of being completely stripped of tags) have been filtered with HTMLPurifier to.  These include all text strings from shortcode and board descriptions and rules
git-svn-id: https://plugins.svn.wordpress.org/my-optional-modules/trunk@810848 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/includes/css/myoptionalmodules.css
+++ b/includes/css/myoptionalmodules.css
@@ -146,8 +146,8 @@
 	.boardDisplay .pages a.focus{background-color:#000;padding:2px;color:#fff;}
 	.mainboard{width:100%;clear:both;display:block;border-bottom:1px solid #b7c5d9;margin:25px auto 25px auto;}
 	.boardDisplay .topic{clear:both;width:350px;margin:0 auto;padding:5px;}
-	.boardDisplay .boardposts{clear:both;width:100%;overflow-x:hidden;padding:10px;}
-	.boardDisplay .boardform{clear:both;width:350px;margin:10px auto;}
+	.boardDisplay .boardposts{clear:both;width:100%;overflow-x:hidden;padding:0px;}
+	.boardDisplay .boardform{clear:both;width:100%;margin:10px auto;overflow:hidden;}
 	.right{float:right;}
 	.left{float:left;}
 	.textright{text-align:right;}
@@ -161,13 +161,14 @@
 	h3.readonly{border:0;text-decoration:none;text-align: center;text-indent: -.12em;color: #f4f1de;font: 70px "anchor-web-1","anchor-web-2", 'Impact', sans-serif;font-weight: 900;display: inline-block;margin: 50px auto;line-height: 1;width: 100%;text-shadow: #691616 .01em .01em 0,#691616 .02em .02em 0,#691616 .03em .03em 0,#691616 .04em .04em 0,#691616 .05em .05em 0,#691616 .06em .06em 0,#691616 .07em .07em 0, #691616 .08em .08em 0,#691616 .09em .09em 0,#691616 .1em .1em 0;}
 	h3.banned{border:0;text-decoration:none;text-align: center;text-indent: -.12em;color: #f4f1de;font: 100px "anchor-web-1","anchor-web-2", 'Impact', sans-serif;font-weight: 900;display: inline-block;margin: 0 auto;line-height: 1;width: 100%;text-shadow: #691616 .01em .01em 0,#691616 .02em .02em 0,#691616 .03em .03em 0,#691616 .04em .04em 0,#691616 .05em .05em 0,#691616 .06em .06em 0,#691616 .07em .07em 0, #691616 .08em .08em 0,#691616 .09em .09em 0,#691616 .1em .1em 0;}
 	h3.options{border:0;text-decoration:none;text-align: center;text-indent: -.12em;color: #f4f1de;font: 40px "anchor-web-1","anchor-web-2", 'Impact', sans-serif;font-weight: 900;display: inline-block;margin: 0 auto;line-height: 1;width: 100%;text-shadow: #691616 .01em .01em 0,#691616 .02em .02em 0,#691616 .03em .03em 0,#691616 .04em .04em 0,#691616 .05em .05em 0,#691616 .06em .06em 0,#691616 .07em .07em 0, #691616 .08em .08em 0,#691616 .09em .09em 0,#691616 .1em .1em 0;padding:10px;}
-	h3.info{clear:both;margin:0 auto;position:relative;border:0;text-decoration:none;text-align: center;text-indent: -.12em;color: #cadfff;font: 30px "anchor-web-1","anchor-web-2", 'Impact', sans-serif;font-weight: 900;display: block;line-height: 1;text-shadow: #152a4a .01em .01em 0,#152a4a .02em .02em 0,#152a4a .03em .03em 0,#152a4a .04em .04em 0,#152a4a .05em .05em 0,#152a4a .06em .06em 0,#152a4a .07em .07em 0, #152a4a .08em .08em 0,#152a4a .09em .09em 0,#152a4a .1em .1em 0;padding:15px 0 15px 0;background-color:#fff;border:1px solid #000;box-shadow: #c1ddfa .01em .01em 0,#c1ddfa .02em .02em 0,#c1ddfa .03em .03em 0,#c1ddfa .04em .04em 0,#c1ddfa .05em .05em 0,#c1ddfa .06em .06em 0,#c1ddfa .07em .07em 0, #c1ddfa .08em .08em 0,#c1ddfa .09em .09em 0,#c1ddfa .1em .1em 0;}
+	h3.info{clear:both;margin:0;position:relative;border:0;text-decoration:none;text-align: center;text-indent: -.12em;color: #cadfff;font: 30px "anchor-web-1","anchor-web-2", 'Impact', sans-serif;font-weight: 900;display: block;line-height: 1;text-shadow: #152a4a .01em .01em 0,#152a4a .02em .02em 0,#152a4a .03em .03em 0,#152a4a .04em .04em 0,#152a4a .05em .05em 0,#152a4a .06em .06em 0,#152a4a .07em .07em 0, #152a4a .08em .08em 0,#152a4a .09em .09em 0,#152a4a .1em .1em 0;
+	padding:15px 0 15px 0;background-color:#fff;box-shadow: #c1ddfa .01em .01em 0,#c1ddfa .02em .02em 0,#c1ddfa .03em .03em 0,#c1ddfa .04em .04em 0,#c1ddfa .05em .05em 0,#c1ddfa .06em .06em 0,#c1ddfa .07em .07em 0, #c1ddfa .08em .08em 0,#c1ddfa .09em .09em 0,#c1ddfa .1em .1em 0;}
 	.boardDisplay article{padding:5px;display:block;margin:10px auto;font-size:13px;line-height:15px;background-color:#fffdf7;}
-	.boardDisplay .op{padding:5px;display:inline-block;margin:10px;font-size:12px;line-height:13px;float:left;width:100%;margin:5px 5px 5px -10px;border-top:1px solid #b7c5d9;}
-	.boardDisplay .postcontainer{background-color:#d6daf0;color:#21272e;}
+	.boardDisplay .op{padding:5px;display:inline-block;margin:10px;font-size:12px;line-height:13px;float:left;width:100%;margin:0 auto;border-top:1px solid #b7c5d9;}
+	.boardDisplay .postcontainer{background-color:#d6daf0;color:#21272e;overflow:hidden;}
 	.boardDisplay .postcontainer:before{content: ">>";}
-	.boardDisplay div.reply{width:auto;padding:5px;display:inline-block;margin:10px;font-size:12px;line-height:14px;text-align:left;margin:5px 25px;float:left;clear:both;}
-	.boardDisplay .op p,.boardDisplay .reply p{margin:2px 0 2px 15px;padding:5px;}
+	.boardDisplay div.reply{max-width:95%;width:auto;padding:5px;display:inline-block;margin:10px;font-size:12px;line-height:14px;text-align:left;margin:5px 25px;float:left;clear:both;}
+	.boardDisplay .op p,.boardDisplay .reply p{margin:2px 0 2px 15px;padding:5px;max-width:95%;word-wrap:break-word;}
 	.boardDisplay article section{width:95%;padding:5px;display:block;margin:5px auto;font-size:14px;line-height:16px;}
 	.boardDisplay .OP{color:#d37b1c;}
 	.boardDisplay .postid,.boardDisplay .OP,.boardDisplay .date{display:inline-block;margin:5px;}
@@ -176,7 +177,7 @@
 	.controlpaneluser{float:right;margin:0 0 0 15px;}
 	.controlpanel{float:right;margin:-2px 0 0 15px;}
 	.mod{font-weight:900;color:#1b3c5d;}
-	div.rules{width:210px;margin:-10px auto 10px auto;font-size:10px !important;line-height:11px !important;border-left:1px solid #b7c5d9;padding:5px;}
+	div.rules{width:350px;margin:-10px auto 10px auto;font-size:10px !important;line-height:11px !important;border:1px solid #b7c5d9;padding:5px;background-color:#fff;text-align:right;}
 	div.rules p{margin:2px auto;}
 	.banned textarea,.banned input[type='submit'],.banned input[type='text']{cursor:pointer;}
 	.banned textarea{width:300px;font-size:13px;line-height:15px;margin:5px auto;border-radius:3px;clear:both;display:block;height:250px;padding:5px;}
@@ -196,3 +197,4 @@
 	.boardDisplay .topic input[type='password']{width:275px;display:block;margin:5px auto;float:right;}
 	.boardDisplay .topic textarea{width:275px;float:right;display:block;margin:5px 0;height:150px;}
 	.boardDisplay .topic label{width:55px;float:left;font-size:12px;line-height:10px;padding:5px;background-color:#f7f7f7;border-radius:3px;border:1px solid #ddd;margin:5px 0 5px 0;text-align:left;}
+	.boardDisplay p.credits{font-size:10px;line-height:12px;text-align:center;margin:5px auto;width:90%;}
